--- a/lang/en.json
+++ b/lang/en.json
@@ -1,37 +1,119 @@
 {
-    "Sitio diseñado y desarrollado por": "Site design and developed by",
-
-    "Características" : "Features",
-    "Convertimos sus ideas en realidad con un diseño gráfico y web único" : "We Bring Your Ideas to Life with unique Graphic and Web Design",
-    "Potencia la Identidad de tu Marca con Servicios de Branding Profesionales" : "Enhance your Brand Identity with Professional Branding Services",
-    "Nuestros servicios integrales incluyen branding, diseño web y diseño gráfico para ayudar a que su negocio se destaque." : "Our comprehensive services include branding, web design, and graphic design to help your business stand out.",
-    "Cree experiencias de usuario atractivas con un diseño web innovador" : "Create Engaging User Experiences with Cutting-Edge Web Design",
-    "Nuestro equipo de diseñadores creará un sitio web que cautive a su audiencia." : "Our team of designers will create a website that captivates your audience.",
-    "Eleve su marca con soluciones de diseño gráfico llamativas" : "Elevate Your Brand with Eye-Catching Graphic Design Solutions",
-    "Desde logotipos hasta materiales de marketing, crearemos imágenes atractivas que dejen una impresión duradera." : "From logos to marketing materials, we'll create compelling visuals that leave a lasting impression.",
-    "Ver más" : "Learn More",
-
-    "Beneficios" : "Benefits",
-    "Destaca con innovadoras soluciones de diseño" : "Stand out with innovative design solutions",
-    "En nuestra agencia, combinamos creatividad y experiencia para ofrecer soluciones atractivas de diseño gráfico y web que ayuden a las empresas a tener éxito. Con nuestro enfoque único, nos aseguramos de que su marca se destaque de la competencia y cautive a su público objetivo." : "At our agency, we combine creativity and expertise to deliver compelling graphic and web design solutions that help businesses succeed. With our unique approach, we ensure that your brand stands out from the competition and captivates your target audience.",
-    "Aptitudes" : "Expertise",
-    "Nuestro equipo de diseñadores y desarrolladores capacitados hace realidad su visión con precisión y estilo." : "Our team of skilled designers and developers bring your vision to life with precision and flair.",
-    "Colaboración" : "Collaboration",
-    "Trabajamos estrechamente con nuestros clientes para comprender sus objetivos y ofrecer soluciones de diseño personalizadas." : "We work closely with our clients to understand their goals and deliver tailored design solutions.",
-
+    "Sobre Nosotros" : "About Us",
+    
     "Servicios" : "Services",
-    "Soluciones de diseño" : "Design Solutions",
-    "Ofrecemos una gama de servicios de diseño creativo para satisfacer sus necesidades." : "We offer a range of creative design services to meet your needs.",
-    "Diseño Web" : "Web Design",
-    "Creamos sitios web impresionantes que son visualmente atractivos y fáciles de usar." : "We create stunning websites that are visually appealing and user-friendly.",
-    "Diseño Gráfico" : "Graphic Design",
-    "Nuestros servicios de diseño gráfico ayudan a que su marca se destaque." : "Our graphic design services help your brand stand out.",
-    "Soluciones de Branding" : "Branding Solutions",
-    "Creamos soluciones de marca únicas y memorables para su negocio." : "We create unique and memorable branding solutions for your business.",
+    
+    "Aires Acondicionados" : "Air Conditioners",
+    "Mantenga su hogar siempre fresco con nuestros servicios de instalación, reparación y carga de gas para aires acondicionados. ¡Calidad y eficiencia garantizadas al mejor precio!" : "Keep your home always cool with our air conditioning installation, repair, and gas recharge services. Quality and efficiency guaranteed at the best price!",
+    "Instalación de aires acondicionados de todas las marcas y modelos." : "Installation of air conditioners of all brands and models.",
+    "Mantenimiento preventivo para prolongar la vida útil de su equipo." : "Preventive maintenance to prolong the life of your equipment.",
+    "Reparación de unidades con garantía de piezas y mano de obra." : "Unit repair with parts and labor warranty.",
+    "Carga de gas refrigerante para un rendimiento óptimo." : "Refrigerant gas recharge for optimal performance.",
+    "Diagnóstico y solución de problemas técnicos en su sistema." : "Diagnosis and troubleshooting of technical issues in your system.",
+    "Limpieza y desinfección de filtros y conductos para mejorar la calidad del aire." : "Cleaning and disinfection of filters and ducts to improve air quality.",
+    "Asesoramiento personalizado para elegir el equipo adecuado según sus necesidades." : "Personalized advice to choose the right equipment according to your needs.",
+    "Servicio de emergencia disponible para reparaciones urgentes." : "Emergency service available for urgent repairs.",
 
-    "Portfolio" : "Portfolio",
-    "una ventana a nuestro mundo creativo" : "A window into our creative world",
-    "Desde diseños innovadores hasta soluciones tecnológicas avanzadas, cada proyecto cuenta una historia única de creatividad, pasión y excelencia." : "From innovative designs to advanced technological solutions, each project tells a unique story of creativity, passion and excellence.",
+    "Electricidad" : "Electricity",
+    "Confíe en nuestros expertos para sus necesidades eléctricas. Ofrecemos instalación, reparación y mantenimiento, garantizando seguridad y eficiencia en su hogar o negocio. ¡Calidad asegurada!" : "Trust our experts for your electrical needs. We offer installation, repair, and maintenance, ensuring safety and efficiency in your home or business. Quality assured!",
+    "Instalación de sistemas eléctricos residenciales y comerciales." : "Installation of residential and commercial electrical systems.",
+    "Reparación de cortocircuitos y fallas eléctricas." : "Repair of short circuits and electrical failures.",
+    "Actualización de paneles eléctricos obsoletos." : "Upgrade of obsolete electrical panels.",
+    "Instalación de iluminación interior y exterior." : "Installation of interior and exterior lighting.",
+    "Cableado estructurado para redes informáticas." : "Structured cabling for computer networks.",
+    "Instalación de sistemas de seguridad y cámaras de vigilancia." : "Installation of security systems and surveillance cameras.",
+    "Servicios de emergencia las 24 horas para reparaciones urgentes." : "24-hour emergency services for urgent repairs.",
+
+    "Fontanería" : "Plumbing",
+    "Nuestros servicios de fontanería incluyen instalación, reparación y mantenimiento, asegurando el funcionamiento óptimo de sus sistemas de agua y gas. Experiencia y calidad para su tranquilidad." : "Our plumbing services include installation, repair, and maintenance, ensuring the optimal functioning of your water and gas systems. Experience and quality for your peace of mind.",
+    "Instalación de tuberías y sistemas de agua potable." : "Installation of pipes and potable water systems.",
+    "Reparación de fugas y roturas en tuberías." : "Repair of leaks and breaks in pipes.",
+    "Mantenimiento de sistemas de calefacción y calentadores de agua." : "Maintenance of heating systems and water heaters.",
+    "Instalación de grifería y sanitarios." : "Installation of faucets and sanitary fixtures.",
+    "Desatasco y limpieza de tuberías y desagües." : "Unclogging and cleaning of pipes and drains.",
+    "Localización y reparación de problemas de humedad." : "Detection and repair of moisture problems.",
+    "Instalación de sistemas de filtración y purificación de agua." : "Installation of water filtration and purification systems.",
+
+    "Reformas" : "Renovations",
+    "Confíe en nuestros expertos para todas sus refacciones del hogar. Ofrecemos soluciones integrales de alta calidad, asegurando acabados impecables y duraderos. ¡Transforme su hogar con nosotros!" : "Trust our experts for all your home renovations. We offer comprehensive high-quality solutions, ensuring impeccable and durable finishes. Transform your home with us!",
+    "Renovación completa de cocinas y baños." : "Complete renovation of kitchens and bathrooms.",
+    "Ampliación de espacios habitables." : "Expansion of living spaces.",
+    "Instalación de suelos y techos nuevos." : "Installation of new floors and ceilings.",
+    "Cambio de ventanas y puertas para mejorar la eficiencia energética." : "Replacement of windows and doors to improve energy efficiency.",
+    "Reformas integrales para modernizar el diseño interior." : "Comprehensive renovations to modernize interior design.",
+    "Construcción de terrazas, porches o áreas exteriores." : "Construction of terraces, porches, or outdoor areas.",
+    "Adaptación de espacios para personas con movilidad reducida." : "Adaptation of spaces for people with reduced mobility.",
+    "Limpieza de Obra" : "Post-construction Cleaning",
+    
+    "Nuestros servicios incluyen" : "Our services include",
+    
+    "Instalación y mantenimiento de aires acondicionados" : "Installation and maintenance of air conditioners",
+    "Desde la selección del equipo adecuado hasta la instalación impecable y el mantenimiento periódico, nos encargamos de mantener su ambiente fresco y confortable durante todo el año." : "From selecting the right equipment to flawless installation and periodic maintenance, we take care of keeping your environment cool and comfortable all year round.",
+
+    "Servicios de electricidad" : "Electrical services",
+    "Ya sea que necesite una instalación eléctrica completa, reparaciones o actualizaciones, nuestro equipo de electricistas garantiza la seguridad y funcionalidad de sus sistemas eléctricos." : "Whether you need a complete electrical installation, repairs, or upgrades, our team of electricians guarantees the safety and functionality of your electrical systems.",
+
+    "Soluciones de fontanería" : "Plumbing solutions",
+    "Desde la reparación de fugas hasta la instalación de sistemas de agua caliente, nuestros fontaneros experimentados están preparados para abordar cualquier desafío." : "From repairing leaks to installing hot water systems, our experienced plumbers are ready to tackle any challenge.",
+
+    "Reforma Integral" : "Complete Renovation",
+    "Transforme su hogar con renovaciones en cocinas, ampliaciones de espacios o modernización del diseño interior. Nuestro equipo de expertos en reformas garantiza resultados que combinan estilo y funcionalidad." : "Transform your home with kitchen renovations, space expansions, or modernizing interior design. Our team of renovation experts guarantees results that combine style and functionality.",
+
+    "¿Tiene una urgencia? Contáctenos." : "Have an emergency? Contact us.",
+    "Urgencias" : "Emergencies",
+
+    "Estamos en Málaga!" : "We are in Málaga!",
+    "Bienvenido a Urquiza Soluciones, somos una empresa que entiende la importancia de contar con sistemas de climatización eficientes, instalaciones eléctricas seguras y sistemas de fontanería confiables en su hogar o negocio. Por eso, nos enorgullece ofrecer servicios de primera calidad que garantizan su comodidad y tranquilidad en todo momento." : "Welcome to Urquiza Soluciones, we are a company that understands the importance of having efficient air conditioning systems, safe electrical installations, and reliable plumbing systems in your home or business. That's why we proudly offer top-quality services that guarantee your comfort and peace of mind at all times.",
+    "Nuestra zona de acción comprende la Costa del Sol desde Málaga hasta Marbella." : "Our service area covers the Costa del Sol from Málaga to Marbella.",
+
+    "Faq's" : "Faq's",
+    "¿Cuándo debo realizar el mantenimiento de mi aire acondicionado?" : "When should I perform maintenance on my air conditioner?",
+    "Se recomienda realizar el mantenimiento anualmente para asegurar un funcionamiento eficiente y prolongar su vida útil." : "It is recommended to perform maintenance annually to ensure efficient operation and prolong its lifespan.",
+    "¿Qué debo hacer si mi aire acondicionado no enfría adecuadamente?" : "What should I do if my air conditioner is not cooling properly?",
+    "Puede ser necesario revisar el filtro de aire y limpiarlo. También se recomienda verificar el nivel de gas refrigerante y el estado de las bobinas del evaporador y condensador." : "It may be necessary to check and clean the air filter. It is also recommended to check the refrigerant level and the condition of the evaporator and condenser coils.",
+    "¿Cuál es la vida útil promedio de un aire acondicionado?" : "What is the average lifespan of an air conditioner?",
+    "La vida útil puede variar dependiendo del modelo y el mantenimiento, pero generalmente se estima entre 10 y 15 años." : "The lifespan can vary depending on the model and maintenance, but it is generally estimated between 10 and 15 years.",
+    "¿Es necesario cargar el gas refrigerante regularmente?" : "Is it necessary to recharge the refrigerant gas regularly?",
+    "Solo se debe cargar el gas refrigerante si hay una fuga detectada. Un sistema de aire acondicionado bien mantenido no debería requerir cargas regulares." : "Refrigerant gas should only be recharged if a leak is detected. A well-maintained air conditioning system should not require regular recharges.",
+    "¿Puedo instalar un aire acondicionado por mi cuenta?" : "Can I install an air conditioner by myself?",
+    "Se recomienda contar con instaladores profesionales para asegurar una instalación adecuada y cumplir con las normativas de seguridad." : "It is recommended to use professional installers to ensure proper installation and comply with safety regulations.",
+    "¿Cuándo debo actualizar mi panel eléctrico?" : "When should I upgrade my electrical panel?",
+    "Debe considerar una actualización si experimenta frecuentes cortocircuitos, fusibles que se queman o si su panel es antiguo y no cumple con las normativas actuales." : "You should consider an upgrade if you experience frequent short circuits, blown fuses, or if your panel is old and does not meet current regulations.",
+    "¿Qué debo hacer ante un apagón repentino en mi casa?" : "What should I do in case of a sudden blackout in my home?",
+    "Verifique si es un problema general en su área o específico de su hogar. Si es en su casa, revise el interruptor principal y contacte a un electricista si es necesario." : "Check if it is a general problem in your area or specific to your home. If it's in your home, check the main switch and contact an electrician if necessary.",
+    "¿Es seguro realizar reparaciones eléctricas por mi cuenta?" : "Is it safe to do electrical repairs by myself?",
+    "No se recomienda. Las reparaciones eléctricas requieren conocimientos técnicos y pueden ser peligrosas si no se realizan correctamente." : "It is not recommended. Electrical repairs require technical knowledge and can be dangerous if not done correctly.",
+    "¿Cómo puedo mejorar la eficiencia energética en mi hogar?" : "How can I improve energy efficiency in my home?",
+    "Instalando iluminación LED, dispositivos de control de temperatura como termostatos inteligentes y asegurándose de que los electrodomésticos estén eficientemente calificados." : "By installing LED lighting, temperature control devices like smart thermostats, and ensuring appliances are energy-efficient.",
+    "¿Qué debo hacer si tengo un enchufe que no funciona?" : "What should I do if I have an outlet that doesn't work?",
+    "Primero, verifique si el interruptor correspondiente está encendido. Si el problema persiste, podría ser necesario revisar el cableado o el propio enchufe con la ayuda de un electricista." : "First, check if the corresponding switch is on. If the problem persists, it may be necessary to check the wiring or the outlet itself with the help of an electrician.",
+    "¿Cómo puedo prevenir las obstrucciones en mis tuberías?" : "How can I prevent clogs in my pipes?",
+    "Evite arrojar residuos sólidos por el desagüe y use protectores de desagüe en los fregaderos. Además, realice limpiezas periódicas con productos desatascadores." : "Avoid throwing solid waste down the drain and use drain protectors in sinks. Also, perform periodic cleanings with unclogging products.",
+    "¿Qué debo hacer si tengo una fuga de agua en mi hogar?" : "What should I do if I have a water leak in my home?",
+    "Cierre inmediatamente la válvula principal de agua para evitar daños adicionales y contacte a un fontanero profesional para reparar la fuga." : "Immediately close the main water valve to prevent further damage and contact a professional plumber to repair the leak.",
+    "¿Cómo puedo mejorar la presión del agua en mi casa?" : "How can I improve water pressure in my home?",
+    "Asegúrese de que las válvulas de cierre parcial no estén cerradas por completo y considere la instalación de una bomba de agua si la presión es constantemente baja." : "Make sure partial shut-off valves are not completely closed and consider installing a water pump if the pressure is consistently low.",
+    "¿Cuándo debo reemplazar mi calentador de agua?" : "When should I replace my water heater?",
+    "Generalmente, los calentadores de agua tienen una vida útil de 8 a 12 años. Considere reemplazarlo si muestra signos de deterioro, como fugas o falta de eficiencia." : "Generally, water heaters have a lifespan of 8 to 12 years. Consider replacing it if it shows signs of deterioration, such as leaks or lack of efficiency.",
+    "¿Cómo puedo evitar problemas congelación de tuberías en invierno?" : "How can I prevent pipe freezing problems in winter?",
+    "Aísle las tuberías expuestas y mantenga un ligero flujo de agua en los grifos durante las olas de frío." : "Insulate exposed pipes and maintain a slight flow of water in the faucets during cold waves.",
+
+    "Instalación y Mantenimiento" : "Installation and Maintenance",
+    "Solicitar presupuesto" : "Request a Quote",
+    "Ver servicio" : "View Service",
+    "Presupuesto sin cargo" : "Free Quote",
+
+    "Contacto" : "Contact",
+    "Si tiene más consultas, no dude en ponerse en contacto con nosotros." : "If you have further questions, do not hesitate to contact us.",
+
+    "Su nombre" : "Your name",
+    "Su correo electrónico" : "Your email",
+    "Su teléfono" : "Your phone",
+    "Zona del trabajo" : "Work area",
+    "Déjenos un mensaje" : "Leave us a message",
+    "Enviar" : "Send",
+
+    "Sitio diseñado y desarrollado por": "Site design and developed by",
 
     "No hay productos publicados" : "There are no products published",
 
@@ -97,15 +179,5 @@
     "Suscríbete a nuestro newsletter.": "Subscribe to our newsletter.",
     "Suscríbete": "Subscribe",
     "Artículos semanales": "Weekly articles",
-    "No enviamos spam": "No spam",
-
-    "La empresa": "The company",
-    "Sobre nosotros": "About us",
-    "Trabaja con nosotros": "Work with us",
-    "Términos & condiciones": "Terms & conditions",
-    "Política de privacidad": "Privacy policy",
-    "Ayuda": "Help",
-    "Soporte": "Support",
-    "Preguntas frecuentes": "Faq",
-    "Contáctenos": "Contact us"
+    "No enviamos spam": "No spam"
 }
