--- a/lang/en.json
+++ b/lang/en.json
@@ -105,6 +105,8 @@
 
     "Contacto" : "Contact",
     "Si tiene más consultas, no dude en ponerse en contacto con nosotros." : "If you have further questions, do not hesitate to contact us.",
+    "Gracias por su mensaje" : "Thank you for your message",
+    "Un asesor se contactará con usted a la brevedad" : "A consultant will contact you shortly",
 
     "Su nombre" : "Your name",
     "Su correo electrónico" : "Your email",
