Cambio de textos en lang. Fix en diseño de atributtes

--- a/lang/en.json
+++ b/lang/en.json
@@ -114,6 +114,8 @@
     "Zona del trabajo" : "Work area",
     "Déjenos un mensaje" : "Leave us a message",
     "Enviar" : "Send",
+    "Mensaje Enviado!" : "Message sent!",
+    "El envío falló. Vuelva a intentar, por favor." : "Message failed. Please, try again",
 
     "Sitio diseñado y desarrollado por": "Site design and developed by",
 
